first training job

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,6 +129,28 @@
     "\n",
     "In this last part, you are free to perform any additional analysis of the dataset. What else would like to know about the data?\n",
     "For example, think about data distribution. So far, you have only looked at a single file..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 17233, 2: 4417, 4: 118}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cls_num = {1: 0, 2: 0, 4: 0}\n",
+    "for data in dataset.take(1000):\n",
+    "    for cl in data['groundtruth_classes'].numpy():\n",
+    "        cls_num[cl] += 1\n",
+    "        \n",
+    "print(cls_num)"
    ]
   },
   {
